--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,13 @@
         "src": "/(.*)",
         "dest": "src/main.ts"
       }
+    ],
+    "methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "PATCH",
+        "DELETE"
     ]
   }
   
